GroupCommonGoal and SquareCommonGoal rewritten to fix a bug